fixed issue with scrollbar background. don't set them transparent

--- a/stylesheets/atom.less
+++ b/stylesheets/atom.less
@@ -11,6 +11,13 @@
     height: 5px;
   }
 
+  ::-webkit-scrollbar-track,
+  /deep/ ::-webkit-scrollbar-track,
+  ::-webkit-scrollbar-corner,
+  /deep/ ::-webkit-scrollbar-corner {
+    background-color: @scrollbar-background-color;
+  }
+
   ::-webkit-scrollbar-thumb,
   /deep/ ::-webkit-scrollbar-thumb {
     background: @scrollbar-color;
