--- a/stylesheets/editor.less
+++ b/stylesheets/editor.less
@@ -6,6 +6,11 @@ atom-text-editor {
   /deep/ ::-webkit-scrollbar-thumb {
     background-color: @background-color-highlight;
   }
+
+  /deep/ ::-webkit-scrollbar-track,
+  /deep/ ::-webkit-scrollbar-corner {
+    background-color: @dark-gray;
+  }
 }
 
 .editor.mini,
