--- a/stylesheets/ui-variables.less
+++ b/stylesheets/ui-variables.less
@@ -57,7 +57,7 @@
 @button-background-color-selected: @light-gray;
 @button-border-color: transparent;
 
-@tab-bar-background-color: @gray;
+@tab-bar-background-color: @base-background-color;
 @tab-bar-border-color: transparent;
 @tab-background-color: @gray;
 @tab-background-color-active: @dark-gray;
@@ -66,7 +66,7 @@
 @tree-view-background-color: @tool-panel-background-color;
 @tree-view-border-color: @tool-panel-border-color;
 
-@scrollbar-background-color: transparent;
+@scrollbar-background-color: @gray;
 @scrollbar-color: @light-gray;
 
 @ui-site-color-1: @background-color-success; // green
